--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = univention-db-tools
-#version =
 author = Univention GmbH
 author_email = packages@univention.de
 description = Collect system information for support case
@@ -28,9 +27,11 @@ python_requires= >=3.7
 packages =
     univention_db_tools
     univention_db_tools.commands
+    univention_db_tools.engine
 
 install_requires =
     click
+    pydantic
 
 [options.entry_points]
 console_scripts =
