--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,12 @@ install_requires =
 console_scripts =
     univention-db-tools = univention_db_tools.main:main
 
+[build_sphinx]
+project = univention-db-tools
+source-dir = doc
+build-dir  = doc/build
+all_files  = 1
+
 [bdist_wheel]
 universal=1
 
