Refactor for archivers/executor

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ include_package_data = False
 python_requires= >=3.7
 packages =
     univention_db_tools
-    univention_db_tools.commands
+    univention_db_tools.cli
     univention_db_tools.engine
 
 install_requires =
